// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-export: errors 1`] = `Array []`;

exports[`import-export: errors 2`] = `Array []`;

exports[`import-export: errors 3`] = `Array []`;

exports[`import-export: errors 4`] = `Array []`;

exports[`import-export: errors 5`] = `Array []`;

exports[`import-export: main.js 1`] = `
"webpackJsonp([ 0 ], [ function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    Object.defineProperty(__webpack_exports__, \\"__esModule\\", {
        value: !0
    });
    var __WEBPACK_IMPORTED_MODULE_0__dep__ = __webpack_require__(1);
    __webpack_exports__.default = function() {
        const b = __WEBPACK_IMPORTED_MODULE_0__dep__.b, baz = \`baz\${Math.random()}\`;
        return () => ({
            a: b + __WEBPACK_IMPORTED_MODULE_0__dep__.a + baz,
            b: b,
            baz: baz
        });
    };
}, function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    __webpack_exports__.a = \\"bar\\", __webpack_exports__.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`import-export: main.js 2`] = `
"webpackJsonp([ 0 ], [ function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    Object.defineProperty(__webpack_exports__, \\"__esModule\\", {
        value: !0
    });
    var __WEBPACK_IMPORTED_MODULE_0__dep__ = __webpack_require__(1);
    __webpack_exports__.default = function() {
        const b = __WEBPACK_IMPORTED_MODULE_0__dep__.b, baz = \`baz\${Math.random()}\`;
        return () => ({
            a: b + __WEBPACK_IMPORTED_MODULE_0__dep__.a + baz,
            b: b,
            baz: baz
        });
    };
}, function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    __webpack_exports__.a = \\"bar\\", __webpack_exports__.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`import-export: main.js 3`] = `
"webpackJsonp([ 0 ], [ function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    Object.defineProperty(__webpack_exports__, \\"__esModule\\", {
        value: !0
    });
    var __WEBPACK_IMPORTED_MODULE_0__dep__ = __webpack_require__(1);
    __webpack_exports__.default = function() {
        const b = __WEBPACK_IMPORTED_MODULE_0__dep__.b, baz = \`baz\${Math.random()}\`;
        return () => ({
            a: b + __WEBPACK_IMPORTED_MODULE_0__dep__.a + baz,
            b: b,
            baz: baz
        });
    };
}, function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    __webpack_exports__.a = \\"bar\\", __webpack_exports__.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`import-export: main.js 4`] = `
"webpackJsonp([ 0 ], [ function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    Object.defineProperty(__webpack_exports__, \\"__esModule\\", {
        value: !0
    });
    var __WEBPACK_IMPORTED_MODULE_0__dep__ = __webpack_require__(1);
    __webpack_exports__.default = function Foo() {
        const b = __WEBPACK_IMPORTED_MODULE_0__dep__.b, baz = \`baz\${Math.random()}\`;
        return () => ({
            a: b + __WEBPACK_IMPORTED_MODULE_0__dep__.a + baz,
            b: b,
            baz: baz
        });
    };
}, function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    __webpack_exports__.a = \\"bar\\", __webpack_exports__.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`import-export: main.js 5`] = `
"webpackJsonp([ 0 ], [ function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    Object.defineProperty(__webpack_exports__, \\"__esModule\\", {
        value: !0
    });
    var __WEBPACK_IMPORTED_MODULE_0__dep__ = __webpack_require__(1);
    __webpack_exports__.default = function() {
        const b = __WEBPACK_IMPORTED_MODULE_0__dep__.b, baz = \`baz\${Math.random()}\`;
        return () => ({
            a: b + __WEBPACK_IMPORTED_MODULE_0__dep__.a + baz,
            b: b,
            baz: baz
        });
    };
}, function(module, __webpack_exports__, __webpack_require__) {
    \\"use strict\\";
    __webpack_exports__.a = \\"bar\\", __webpack_exports__.b = \\"foo\\";
} ], [ 0 ]);"
`;

exports[`import-export: manifest.js 1`] = `
"!function(modules) {
    var parentJsonpFunction = window.webpackJsonp;
    window.webpackJsonp = function(chunkIds, moreModules, executeModules) {
        for (var moduleId, chunkId, result, i = 0, resolves = []; i < chunkIds.length; i++) chunkId = chunkIds[i], 
        installedChunks[chunkId] && resolves.push(installedChunks[chunkId][0]), installedChunks[chunkId] = 0;
        for (moduleId in moreModules) Object.prototype.hasOwnProperty.call(moreModules, moduleId) && (modules[moduleId] = moreModules[moduleId]);
        for (parentJsonpFunction && parentJsonpFunction(chunkIds, moreModules, executeModules); resolves.length; ) resolves.shift()();
        if (executeModules) for (i = 0; i < executeModules.length; i++) result = __webpack_require__(__webpack_require__.s = executeModules[i]);
        return result;
    };
    var installedModules = {}, installedChunks = {
        1: 0
    };
    function __webpack_require__(moduleId) {
        if (installedModules[moduleId]) return installedModules[moduleId].exports;
        var module = installedModules[moduleId] = {
            i: moduleId,
            l: !1,
            exports: {}
        };
        return modules[moduleId].call(module.exports, module, module.exports, __webpack_require__), 
        module.l = !0, module.exports;
    }
    __webpack_require__.e = function(chunkId) {
        var installedChunkData = installedChunks[chunkId];
        if (0 === installedChunkData) return new Promise(function(resolve) {
            resolve();
        });
        if (installedChunkData) return installedChunkData[2];
        var promise = new Promise(function(resolve, reject) {
            installedChunkData = installedChunks[chunkId] = [ resolve, reject ];
        });
        installedChunkData[2] = promise;
        var head = document.getElementsByTagName(\\"head\\")[0], script = document.createElement(\\"script\\");
        script.type = \\"text/javascript\\", script.charset = \\"utf-8\\", script.async = !0, script.timeout = 12e4, 
        __webpack_require__.nc && script.setAttribute(\\"nonce\\", __webpack_require__.nc), 
        script.src = __webpack_require__.p + \\"\\" + chunkId + \\".\\" + ({
            0: \\"main\\"
        }[chunkId] || chunkId) + \\".js\\";
        var timeout = setTimeout(onScriptComplete, 12e4);
        function onScriptComplete() {
            script.onerror = script.onload = null, clearTimeout(timeout);
            var chunk = installedChunks[chunkId];
            0 !== chunk && (chunk && chunk[1](new Error(\\"Loading chunk \\" + chunkId + \\" failed.\\")), 
            installedChunks[chunkId] = void 0);
        }
        return script.onerror = script.onload = onScriptComplete, head.appendChild(script), 
        promise;
    }, __webpack_require__.m = modules, __webpack_require__.c = installedModules, __webpack_require__.d = function(exports, name, getter) {
        __webpack_require__.o(exports, name) || Object.defineProperty(exports, name, {
            configurable: !1,
            enumerable: !0,
            get: getter
        });
    }, __webpack_require__.n = function(module) {
        var getter = module && module.__esModule ? function() {
            return module.default;
        } : function() {
            return module;
        };
        return __webpack_require__.d(getter, \\"a\\", getter), getter;
    }, __webpack_require__.o = function(object, property) {
        return Object.prototype.hasOwnProperty.call(object, property);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(err) {
        throw console.error(err), err;
    };
}([]);"
`;

exports[`import-export: manifest.js 2`] = `
"!function(modules) {
    var parentJsonpFunction = window.webpackJsonp;
    window.webpackJsonp = function(chunkIds, moreModules, executeModules) {
        for (var moduleId, chunkId, result, i = 0, resolves = []; i < chunkIds.length; i++) chunkId = chunkIds[i], 
        installedChunks[chunkId] && resolves.push(installedChunks[chunkId][0]), installedChunks[chunkId] = 0;
        for (moduleId in moreModules) Object.prototype.hasOwnProperty.call(moreModules, moduleId) && (modules[moduleId] = moreModules[moduleId]);
        for (parentJsonpFunction && parentJsonpFunction(chunkIds, moreModules, executeModules); resolves.length; ) resolves.shift()();
        if (executeModules) for (i = 0; i < executeModules.length; i++) result = __webpack_require__(__webpack_require__.s = executeModules[i]);
        return result;
    };
    var installedModules = {}, installedChunks = {
        1: 0
    };
    function __webpack_require__(moduleId) {
        if (installedModules[moduleId]) return installedModules[moduleId].exports;
        var module = installedModules[moduleId] = {
            i: moduleId,
            l: !1,
            exports: {}
        };
        return modules[moduleId].call(module.exports, module, module.exports, __webpack_require__), 
        module.l = !0, module.exports;
    }
    __webpack_require__.e = function(chunkId) {
        var installedChunkData = installedChunks[chunkId];
        if (0 === installedChunkData) return new Promise(function(resolve) {
            resolve();
        });
        if (installedChunkData) return installedChunkData[2];
        var promise = new Promise(function(resolve, reject) {
            installedChunkData = installedChunks[chunkId] = [ resolve, reject ];
        });
        installedChunkData[2] = promise;
        var head = document.getElementsByTagName(\\"head\\")[0], script = document.createElement(\\"script\\");
        script.type = \\"text/javascript\\", script.charset = \\"utf-8\\", script.async = !0, script.timeout = 12e4, 
        __webpack_require__.nc && script.setAttribute(\\"nonce\\", __webpack_require__.nc), 
        script.src = __webpack_require__.p + \\"\\" + chunkId + \\".\\" + ({
            0: \\"main\\"
        }[chunkId] || chunkId) + \\".js\\";
        var timeout = setTimeout(onScriptComplete, 12e4);
        function onScriptComplete() {
            script.onerror = script.onload = null, clearTimeout(timeout);
            var chunk = installedChunks[chunkId];
            0 !== chunk && (chunk && chunk[1](new Error(\\"Loading chunk \\" + chunkId + \\" failed.\\")), 
            installedChunks[chunkId] = void 0);
        }
        return script.onerror = script.onload = onScriptComplete, head.appendChild(script), 
        promise;
    }, __webpack_require__.m = modules, __webpack_require__.c = installedModules, __webpack_require__.d = function(exports, name, getter) {
        __webpack_require__.o(exports, name) || Object.defineProperty(exports, name, {
            configurable: !1,
            enumerable: !0,
            get: getter
        });
    }, __webpack_require__.n = function(module) {
        var getter = module && module.__esModule ? function() {
            return module.default;
        } : function() {
            return module;
        };
        return __webpack_require__.d(getter, \\"a\\", getter), getter;
    }, __webpack_require__.o = function(object, property) {
        return Object.prototype.hasOwnProperty.call(object, property);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(err) {
        throw console.error(err), err;
    };
}([]);"
`;

exports[`import-export: manifest.js 3`] = `
"!function(modules) {
    var parentJsonpFunction = window.webpackJsonp;
    window.webpackJsonp = function(chunkIds, moreModules, executeModules) {
        for (var moduleId, chunkId, result, i = 0, resolves = []; i < chunkIds.length; i++) chunkId = chunkIds[i], 
        installedChunks[chunkId] && resolves.push(installedChunks[chunkId][0]), installedChunks[chunkId] = 0;
        for (moduleId in moreModules) Object.prototype.hasOwnProperty.call(moreModules, moduleId) && (modules[moduleId] = moreModules[moduleId]);
        for (parentJsonpFunction && parentJsonpFunction(chunkIds, moreModules, executeModules); resolves.length; ) resolves.shift()();
        if (executeModules) for (i = 0; i < executeModules.length; i++) result = __webpack_require__(__webpack_require__.s = executeModules[i]);
        return result;
    };
    var installedModules = {}, installedChunks = {
        1: 0
    };
    function __webpack_require__(moduleId) {
        if (installedModules[moduleId]) return installedModules[moduleId].exports;
        var module = installedModules[moduleId] = {
            i: moduleId,
            l: !1,
            exports: {}
        };
        return modules[moduleId].call(module.exports, module, module.exports, __webpack_require__), 
        module.l = !0, module.exports;
    }
    __webpack_require__.e = function(chunkId) {
        var installedChunkData = installedChunks[chunkId];
        if (0 === installedChunkData) return new Promise(function(resolve) {
            resolve();
        });
        if (installedChunkData) return installedChunkData[2];
        var promise = new Promise(function(resolve, reject) {
            installedChunkData = installedChunks[chunkId] = [ resolve, reject ];
        });
        installedChunkData[2] = promise;
        var head = document.getElementsByTagName(\\"head\\")[0], script = document.createElement(\\"script\\");
        script.type = \\"text/javascript\\", script.charset = \\"utf-8\\", script.async = !0, script.timeout = 12e4, 
        __webpack_require__.nc && script.setAttribute(\\"nonce\\", __webpack_require__.nc), 
        script.src = __webpack_require__.p + \\"\\" + chunkId + \\".\\" + ({
            0: \\"main\\"
        }[chunkId] || chunkId) + \\".js\\";
        var timeout = setTimeout(onScriptComplete, 12e4);
        function onScriptComplete() {
            script.onerror = script.onload = null, clearTimeout(timeout);
            var chunk = installedChunks[chunkId];
            0 !== chunk && (chunk && chunk[1](new Error(\\"Loading chunk \\" + chunkId + \\" failed.\\")), 
            installedChunks[chunkId] = void 0);
        }
        return script.onerror = script.onload = onScriptComplete, head.appendChild(script), 
        promise;
    }, __webpack_require__.m = modules, __webpack_require__.c = installedModules, __webpack_require__.d = function(exports, name, getter) {
        __webpack_require__.o(exports, name) || Object.defineProperty(exports, name, {
            configurable: !1,
            enumerable: !0,
            get: getter
        });
    }, __webpack_require__.n = function(module) {
        var getter = module && module.__esModule ? function() {
            return module.default;
        } : function() {
            return module;
        };
        return __webpack_require__.d(getter, \\"a\\", getter), getter;
    }, __webpack_require__.o = function(object, property) {
        return Object.prototype.hasOwnProperty.call(object, property);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(err) {
        throw console.error(err), err;
    };
}([]);"
`;

exports[`import-export: manifest.js 4`] = `
"!function(modules) {
    var parentJsonpFunction = window.webpackJsonp;
    window.webpackJsonp = function webpackJsonpCallback(chunkIds, moreModules, executeModules) {
        for (var moduleId, chunkId, result, i = 0, resolves = []; i < chunkIds.length; i++) chunkId = chunkIds[i], 
        installedChunks[chunkId] && resolves.push(installedChunks[chunkId][0]), installedChunks[chunkId] = 0;
        for (moduleId in moreModules) Object.prototype.hasOwnProperty.call(moreModules, moduleId) && (modules[moduleId] = moreModules[moduleId]);
        for (parentJsonpFunction && parentJsonpFunction(chunkIds, moreModules, executeModules); resolves.length; ) resolves.shift()();
        if (executeModules) for (i = 0; i < executeModules.length; i++) result = __webpack_require__(__webpack_require__.s = executeModules[i]);
        return result;
    };
    var installedModules = {}, installedChunks = {
        1: 0
    };
    function __webpack_require__(moduleId) {
        if (installedModules[moduleId]) return installedModules[moduleId].exports;
        var module = installedModules[moduleId] = {
            i: moduleId,
            l: !1,
            exports: {}
        };
        return modules[moduleId].call(module.exports, module, module.exports, __webpack_require__), 
        module.l = !0, module.exports;
    }
    __webpack_require__.e = function requireEnsure(chunkId) {
        var installedChunkData = installedChunks[chunkId];
        if (0 === installedChunkData) return new Promise(function(resolve) {
            resolve();
        });
        if (installedChunkData) return installedChunkData[2];
        var promise = new Promise(function(resolve, reject) {
            installedChunkData = installedChunks[chunkId] = [ resolve, reject ];
        });
        installedChunkData[2] = promise;
        var head = document.getElementsByTagName(\\"head\\")[0], script = document.createElement(\\"script\\");
        script.type = \\"text/javascript\\", script.charset = \\"utf-8\\", script.async = !0, script.timeout = 12e4, 
        __webpack_require__.nc && script.setAttribute(\\"nonce\\", __webpack_require__.nc), 
        script.src = __webpack_require__.p + \\"\\" + chunkId + \\".\\" + ({
            0: \\"main\\"
        }[chunkId] || chunkId) + \\".js\\";
        var timeout = setTimeout(onScriptComplete, 12e4);
        function onScriptComplete() {
            script.onerror = script.onload = null, clearTimeout(timeout);
            var chunk = installedChunks[chunkId];
            0 !== chunk && (chunk && chunk[1](new Error(\\"Loading chunk \\" + chunkId + \\" failed.\\")), 
            installedChunks[chunkId] = void 0);
        }
        return script.onerror = script.onload = onScriptComplete, head.appendChild(script), 
        promise;
    }, __webpack_require__.m = modules, __webpack_require__.c = installedModules, __webpack_require__.d = function(exports, name, getter) {
        __webpack_require__.o(exports, name) || Object.defineProperty(exports, name, {
            configurable: !1,
            enumerable: !0,
            get: getter
        });
    }, __webpack_require__.n = function(module) {
        var getter = module && module.__esModule ? function getDefault() {
            return module.default;
        } : function getModuleExports() {
            return module;
        };
        return __webpack_require__.d(getter, \\"a\\", getter), getter;
    }, __webpack_require__.o = function(object, property) {
        return Object.prototype.hasOwnProperty.call(object, property);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(err) {
        throw console.error(err), err;
    };
}([]);"
`;

exports[`import-export: manifest.js 5`] = `
"!function(modules) {
    var parentJsonpFunction = window.webpackJsonp;
    window.webpackJsonp = function(chunkIds, moreModules, executeModules) {
        for (var moduleId, chunkId, result, i = 0, resolves = []; i < chunkIds.length; i++) chunkId = chunkIds[i], 
        installedChunks[chunkId] && resolves.push(installedChunks[chunkId][0]), installedChunks[chunkId] = 0;
        for (moduleId in moreModules) Object.prototype.hasOwnProperty.call(moreModules, moduleId) && (modules[moduleId] = moreModules[moduleId]);
        for (parentJsonpFunction && parentJsonpFunction(chunkIds, moreModules, executeModules); resolves.length; ) resolves.shift()();
        if (executeModules) for (i = 0; i < executeModules.length; i++) result = __webpack_require__(__webpack_require__.s = executeModules[i]);
        return result;
    };
    var installedModules = {}, installedChunks = {
        1: 0
    };
    function __webpack_require__(moduleId) {
        if (installedModules[moduleId]) return installedModules[moduleId].exports;
        var module = installedModules[moduleId] = {
            i: moduleId,
            l: !1,
            exports: {}
        };
        return modules[moduleId].call(module.exports, module, module.exports, __webpack_require__), 
        module.l = !0, module.exports;
    }
    __webpack_require__.e = function(chunkId) {
        var installedChunkData = installedChunks[chunkId];
        if (0 === installedChunkData) return new Promise(function(resolve) {
            resolve();
        });
        if (installedChunkData) return installedChunkData[2];
        var promise = new Promise(function(resolve, reject) {
            installedChunkData = installedChunks[chunkId] = [ resolve, reject ];
        });
        installedChunkData[2] = promise;
        var head = document.getElementsByTagName(\\"head\\")[0], script = document.createElement(\\"script\\");
        script.type = \\"text/javascript\\", script.charset = \\"utf-8\\", script.async = !0, script.timeout = 12e4, 
        __webpack_require__.nc && script.setAttribute(\\"nonce\\", __webpack_require__.nc), 
        script.src = __webpack_require__.p + \\"\\" + chunkId + \\".\\" + ({
            0: \\"main\\"
        }[chunkId] || chunkId) + \\".js\\";
        var timeout = setTimeout(onScriptComplete, 12e4);
        function onScriptComplete() {
            script.onerror = script.onload = null, clearTimeout(timeout);
            var chunk = installedChunks[chunkId];
            0 !== chunk && (chunk && chunk[1](new Error(\\"Loading chunk \\" + chunkId + \\" failed.\\")), 
            installedChunks[chunkId] = void 0);
        }
        return script.onerror = script.onload = onScriptComplete, head.appendChild(script), 
        promise;
    }, __webpack_require__.m = modules, __webpack_require__.c = installedModules, __webpack_require__.d = function(exports, name, getter) {
        __webpack_require__.o(exports, name) || Object.defineProperty(exports, name, {
            configurable: !1,
            enumerable: !0,
            get: getter
        });
    }, __webpack_require__.n = function(module) {
        var getter = module && module.__esModule ? function() {
            return module.default;
        } : function() {
            return module;
        };
        return __webpack_require__.d(getter, \\"a\\", getter), getter;
    }, __webpack_require__.o = function(object, property) {
        return Object.prototype.hasOwnProperty.call(object, property);
    }, __webpack_require__.p = \\"\\", __webpack_require__.oe = function(err) {
        throw console.error(err), err;
    };
}([]);"
`;

exports[`import-export: warnings 1`] = `Array []`;

exports[`import-export: warnings 2`] = `Array []`;

exports[`import-export: warnings 3`] = `Array []`;

exports[`import-export: warnings 4`] = `Array []`;

exports[`import-export: warnings 5`] = `Array []`;
